2009-06-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*.spad.pamphlet: replace $ by %

2009-06-05  Franz Lehner  <lehner@finanz.math.tugraz.at>

	* cleanup of FreeModule

2009-05-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nrunfast.boot: newHasTest(): Signal error
	when domain is nil.

2009-05-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: compQuote(): Allow only
	symbols, set result type.
	* src/algebra/*: Convert strings to symbols.

2009-05-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Better error checking.
	src/algebra/kl.spad.pamphlet: Adjust.

2009-05-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*: Add Comparable, use it instead of
	OrderedSet when appropriate.
	src/input/bugs2009.input.pamphlet,
	src/input/mapleok.input.pamphlet,
	src/input/ruleset.input.pamphlet: Adjust tests.

2009-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: compPretend(): Change error
	to warning.

2009-05-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Optimize trivial lambdas.

2009-05-10  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/gaussian.spad.pamphlet,
	src/algebra/gpgcd.spad.pamphlet, src/algebra/groebf.spad.pamphlet,
	src/algebra/mts.spad.pamphlet, src/algebra/puiseux.spad.pamphlet:
	replace +-> by direct function call

2009-05-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad.pamphlet,
	src/algebra/tree.spad.pamphlet: Change nested functions to
	closures.

2009-05-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*: Merge new-lambda.

2009-04-29  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* INSTALL.CYGWIN: update to new cygwin packages, note problems
	with building under X, fricas.el and efricas are now automatically
	installed

2009-04-28  Ralf Hemmecke  <ralf@hemmecke.de>

	* contrib/emacs/Makefile.in: Must regenerate efricas after