@@ -1008,7 +1008,7 @@ compIf(["IF",aOrig,b,c],m,E) ==
   [xb,mb,Eb]:= Tb:= compFromIf(b,m,Ea) or return nil
   [xc,mc,Ec]:= Tc:= compFromIf(c,resolve(mb,m),Einv) or return nil
   xb':= coerce(Tb,mc) or return nil
-  x:= ["IF",xa,quotify xb'.expr,quotify xc]
+  x:= ["IF", xa, xb'.expr, xc]
   (returnEnv:= Env(xb'.env,Ec,xb'.expr,xc,E)) where
     Env(bEnv,cEnv,b,c,E) ==
       canReturn(b,0,0,true) =>
